# habu

./: .gitignore  README.md  pyproject.toml
habu/: __main__.py  checks.py  cli.py  discovery.py  executor.py  inspect_utils.py  lint.py  models.py  registry.py  ui.py
habu/projects/: p00_growing_code.py  p01_code_cultivation.py  p02_garden_guardian.py  p03_data_quest.py  p04_data_archivist.py  p05_code_nexus.py  p06_the_codex.py  p07_datadeck.py  p08_the_matrix.py  p09_cosmic_data.py  p10_funcmage.py
