[project]
name = "habu"
version = "0.1.0"
description = "Modular tester for the 42 Python Piscine subjects"
requires-python = ">=3.10"
dependencies = [
    "rich>=13",
    "pydantic>=2",
    "flake8>=7.3.0",
    "mypy>=2.3.0",
]

[project.scripts]
habu = "habu.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["habu"]
